// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prepends https schema 1`] = `
<Image
  onError={[Function]}
  onLayout={[Function]}
  onLoad={[Function]}
  source={
    Object {
      "uri": "https://example.com/image.jpg",
    }
  }
  style={
    Array [
      Object {
        "height": 1,
        "width": 750,
      },
      undefined,
    ]
  }
/>
`;

exports[`renders correctly with no dimensions and given URI 1`] = `
<Image
  onError={[Function]}
  onLayout={[Function]}
  onLoad={[Function]}
  source={
    Object {
      "uri": "http://example.com/image.jpg",
    }
  }
  style={
    Array [
      Object {
        "height": 1,
        "width": 750,
      },
      undefined,
    ]
  }
/>
`;
